Added timestamps to message entities and friendships
