# src/adapters/event-handlers/implementations/send-direct-message.handler.ts
@@ -1,5 +1,7 @@
-import { injectable } from "inversify";
-import { l } from "../../../common/logger";
+import { injectable, inject } from "inversify";
+import { z } from "zod";
+import { UseCases } from "../../../common/dependency-injection";
+import { SendDirectMessageUseCase } from "../../../use-cases/implementations";
 import { IConnection } from "../../types";
 import { ISendDirectMessageEventHandler } from "../interfaces";
 
@@ -7,7 +9,36 @@ import { ISendDirectMessageEventHandler } from "../interfaces";
 export class SendDirectMessageEventHandler
   implements ISendDirectMessageEventHandler
 {
+  sendDirectMessageUseCase: SendDirectMessageUseCase;
+
+  constructor(
+    @inject(UseCases.sendDirectMessage)
+    sendDirectMessageUseCase: SendDirectMessageUseCase
+  ) {
+    this.sendDirectMessageUseCase = sendDirectMessageUseCase;
+  }
+
   async execute(connection: IConnection, data: any) {
-    l.info(data);
+    try {
+      const { recipientId, text } = z
+        .object({
+          recipientId: z.string(),
+          text: z.string(),
+        })
+        .parse(data);
+      await this.sendDirectMessageUseCase.execute(
+        connection.locals.cognitoId,
+        recipientId,
+        text
+      );
+    } catch (err) {
+      if (err instanceof z.ZodError) {
+        connection.send("Validation", err.issues);
+      } else if (err instanceof Error) {
+        connection.send("Error", err.message);
+      } else {
+        connection.send("Error", err);
+      }
+    }
   }
 }
